# argos-mission-software

./: .gitignore  ARGOS_Architecture_Plan.md  IMPLEMENTATION_JOURNAL.md  LICENSE  README.md  SESSION.md
src/argos_authority_manager_node/: CMakeLists.txt  package.xml
src/argos_authority_manager_node/src/: AuthorityManagerNode.cpp
src/argos_bringup/config/: ekf_params.yaml  recovery_policies.yaml  watchdog_timeouts.yaml
src/argos_bringup/launch/: argos_sitl.launch.py
src/argos_core_authority/: CMakeLists.txt  package.xml
src/argos_core_authority/include/argos_core_authority/: AuthorityManagerImpl.hpp  IAuthorityManager.hpp
src/argos_core_authority/src/: AuthorityManagerImpl.cpp
src/argos_core_authority/test/: test_authority_manager.cpp
src/argos_core_fdir/: CMakeLists.txt  package.xml
src/argos_core_fdir/include/argos_core_fdir/: FaultMonitorImpl.hpp  IFaultMonitor.hpp  IRecoveryStrategy.hpp  RecoveryManager.hpp  RecoveryStrategies.hpp
src/argos_core_fdir/src/: FaultMonitorImpl.cpp  RecoveryManager.cpp  RecoveryStrategies.cpp
src/argos_core_fdir/test/: test_fault_monitor.cpp  test_recovery_strategies.cpp
src/argos_core_mission/: CMakeLists.txt  package.xml
src/argos_core_mission/include/argos_core_mission/: IMissionExecutor.hpp  MissionExecutorImpl.hpp
src/argos_core_mission/src/: MissionExecutorImpl.cpp
src/argos_core_mission/test/: test_mission_executor.cpp
src/argos_core_navigation/: CMakeLists.txt  package.xml
src/argos_core_navigation/include/argos_core_navigation/: EKFStateEstimator.hpp  INavigationManager.hpp  IStateEstimator.hpp  WaypointNavigator.hpp
src/argos_core_navigation/src/: EKFStateEstimator.cpp  WaypointNavigator.cpp
src/argos_core_navigation/test/: test_waypoint_navigator.cpp
src/argos_msgs/: CMakeLists.txt  package.xml
src/argos_msgs/action/: ExecuteMission.action  NavigateTo.action
src/argos_msgs/msg/: FaultEvent.msg  FlightState.msg  MissionStatus.msg  NodeHeartbeat.msg  SystemHealth.msg  WaypointList.msg
src/argos_msgs/srv/: LoadMission.srv  RequestAuthority.srv  SetRecoveryPolicy.srv
src/argos_system_watchdog_node/: CMakeLists.txt  package.xml
src/argos_system_watchdog_node/src/: SystemWatchdogNode.cpp
