<?xml version="1.0"?>
<package format="3">
  <name>argos_authority_manager_node</name>
  <version>0.1.0</version>
  <description>ARGOS authority manager ROS2 node — command arbitration via Mediator pattern</description>
  <maintainer email="santiagoflores028@gmail.com">Santiago Flores</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>argos_msgs</depend>
  <depend>std_msgs</depend>
  <depend>argos_core_authority</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
