<?xml version="1.0"?>
<package format="3">
  <name>argos_core_navigation</name>
  <version>0.1.0</version>
  <description>ARGOS navigation core — pure C++ EKF state estimator and waypoint navigator (no ROS2)</description>
  <maintainer email="santiagoflores028@gmail.com">Santiago Flores</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
